--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme_color">
 
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="styles/reset.css">
@@ -26,6 +27,8 @@
     </div>
     <img src="" width = 160 id="front-sprite"/>
   </div>
+
+  <button id="install" hidden>Install</button>
 </body>
 
 <script src="scripts/service-worker.js"></script>
